Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11983

Text, TextEdit and TextInput elements are not aligned pixel perfectly with each other

    XMLWordPrintable

Details

    Description

      Text that is anchored to the left, top or verticalCenter of it's parent is painted at the same position with each element: Text, TextInput and TextEdit. Text that is anchored to the right, horizontalCenter or bottom of it's parent is painted at slightly different positions with different text elements. See attachement pixelperfecttext.qml that rotates between Text, TextInput and TextEdit elements.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            wallison Warwick Allison (closed Nokia identity) (Inactive)
            jpetrell Joona Petrell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes