src/declarative/graphicsitems/qdeclarativetextedit.cpp
@@ -1341,6 +1341,15 @@ QRectF QDeclarativeTextEdit::boundingRect() const
 {
     Q_D(const QDeclarativeTextEdit);
     QRectF r = QDeclarativePaintedItem::boundingRect();
+    int cursorWidth = 1;
+    if(d->cursor)
+        cursorWidth = d->cursor->width();
+    if(!d->document->isEmpty())
+        cursorWidth += 3;// ### Need a better way of accounting for space between char and cursor
+
+    // Could include font max left/right bearings to either side of rectangle.
+
+    r.setRight(r.right() + cursorWidth);
     return r.translated(0,d->yoff);
 }
 
@@ -1380,12 +1389,6 @@ void QDeclarativeTextEdit::updateSize()
         int newWidth = qCeil(d->document->idealWidth());
         if (!widthValid() && d->document->textWidth() != newWidth)
             d->document->setTextWidth(newWidth); // ### Text does not align if width is not set (QTextDoc bug)
-        int cursorWidth = 1;
-        if(d->cursor)
-            cursorWidth = d->cursor->width();
-        newWidth += cursorWidth;
-        if(!d->document->isEmpty())
-            newWidth += 3;// ### Need a better way of accounting for space between char and cursor
         // ### Setting the implicitWidth triggers another updateSize(), and unless there are bindings nothing has changed.
         setImplicitWidth(newWidth);
         qreal newHeight = d->document->isEmpty() ? fm.height() : (int)d->document->size().height();
